# finplanner

./: .gitignore  pyproject.toml  requirements.txt  state.json
app/: streamlit_app.py
finplanner/: __init__.py  allocate.py  cli.py  config.py  eligibility.py  flow.py  invest.py  io.py  loan.py  rates.py  runway.py  scenarios.py  severance.py  summary.py  tax.py  trace.py
tests/: conftest.py  test_allocate.py  test_eligibility.py  test_flow.py  test_invest.py  test_loan.py  test_runway.py  test_severance.py  test_tax.py
